--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+nav {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: sticky;
+  }
+  
+  li a {
+    display: block;
+    color: rgb(0, 0, 0);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 22;
+  }
+  
+  li a:hover {
+    padding: 20;
+  }
+
+
+}
+
 body {
   background-image: url("https://github.com/lucydelash/MyPersonalSite/blob/main/portfolio-background.jpg?raw=true");
+  background-size: cover;
 }
