added portfolio page pictures

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 nav {
   ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    float: right;
     overflow: hidden;
     position: sticky;
   }
