--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,7 @@ p {
   justify-content: center;
   flex-wrap: wrap;
 }
+
+#bob-basso {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
