css changes on nav bar

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ ul {
 li a {
   display: block;
   color: rgb(0, 0, 0);
-  float: center;
+  float: right;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   padding: 14px 16px;
   text-align: center;
@@ -18,7 +18,7 @@ li a {
 }
 
 li a:hover {
-  font-size: 10;
+  font-size: 14;
 }
 
 body {
